--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "fabric-ca-client": "^1.4.8",
-    "fabric-client": "^1.4.8",
-    "fabric-common": "^1.4.8",
-    "fabric-network": "^1.4.8",
+    "fabric-ca-client": "beta",
+    "fabric-client": "beta",
+    "fabric-common": "beta",
+    "fabric-network": "beta",
     "helmet": "^3.21.3",
     "pem": "^1.14.4"
   }
