--- a/base/docker-compose-base.yaml
+++ b/base/docker-compose-base.yaml
@@ -58,3 +58,51 @@ services:
       - peer0.applicant.mainauthority.com:/var/hyperledger/production
     ports:
       - 9051:9051
+
+  ca.mainauthority.com:
+    container_name: ca.mainauthority.com
+    extends:
+      file: ca-base.yaml
+      service: ca-base
+    environment:
+      - FABRIC_CA_SERVER_CA_NAME=MainAuthorityCA
+      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.mainauthority.com-cert.pem
+      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/priv_sk
+      - FABRIC_CA_SERVER_PORT=7054
+    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.mainauthority.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/priv_sk -b admin:adminpw -d'
+    volumes:
+      - ../crypto-config/ordererOrganizations/mainauthority.com/ca/:/etc/hyperledger/fabric-ca-server-config
+    ports:
+      - 7054:7054
+
+  ca.institution.mainauthority.com:
+    container_name: ca.institution.mainauthority.com
+    extends:
+      file: ca-base.yaml
+      service: ca-base
+    environment:
+      - FABRIC_CA_SERVER_CA_NAME=MainAuthorityInstitutionCA
+      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.institution.mainauthority.com-cert.pem
+      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/priv_sk
+      - FABRIC_CA_SERVER_PORT=8054
+    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.institution.mainauthority.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/priv_sk -b admin:adminpw -d'
+    volumes:
+      - ../crypto-config/peerOrganizations/institution.mainauthority.com/ca/:/etc/hyperledger/fabric-ca-server-config
+    ports:
+      - 8054:8054
+
+  ca.applicant.mainauthority.com:
+    container_name: ca.applicant.mainauthority.com
+    extends:
+      file: ca-base.yaml
+      service: ca-base
+    environment:
+      - FABRIC_CA_SERVER_CA_NAME=MainAuthorityApplicantCA
+      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.applicant.mainauthority.com-cert.pem
+      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/priv_sk
+      - FABRIC_CA_SERVER_PORT=9054
+    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.applicant.mainauthority.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/priv_sk -b admin:adminpw -d'
+    volumes:
+      - ../crypto-config/peerOrganizations/applicant.mainauthority.com/ca/:/etc/hyperledger/fabric-ca-server-config
+    ports:
+      - 9054:9054
