Update & Bug fix

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,15 @@
 .DS_Store
 .project
 
-# Channel artifacts and crypto material
+# Generated elements
 /channel-artifacts
 /crypto-config
+/scripts
+/wallet
+msp/
+fabric-ca-server.db
+IssuerPublicKey
+IssuerRevocationPublicKey
 
 # Omit Go vendor directories
 vendor/
@@ -88,10 +94,6 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
-
-# dotenv environment variables file
-.env
-.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
