--- a/base/ca-base.yaml
+++ b/base/ca-base.yaml
@@ -3,7 +3,7 @@ version: '2'
 services:
 
   ca-base:
-    image: hyperledger/fabric-ca
+    image: hyperledger/fabric-ca:$CA_IMAGE_TAG
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_TLS_ENABLED=true
+    command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
