--- a/base/docker-compose-base.yaml
+++ b/base/docker-compose-base.yaml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
       - ../crypto-config/ordererOrganizations/mainauthority.com/orderers/orderer.mainauthority.com/msp:/var/hyperledger/orderer/msp
-      - ../crypto-config/ordererOrganizations/mainauthority.com/orderers/orderer.mainauthority.com/tls/:/var/hyperledger/orderer/tls
+      - ../crypto-config/ordererOrganizations/mainauthority.com/orderers/orderer.mainauthority.com/tls:/var/hyperledger/orderer/tls
       - orderer.mainauthority.com:/var/hyperledger/production/orderer
     ports:
       - 7050:7050
@@ -22,12 +22,12 @@ services:
       service: peer-base
     environment:
       - CORE_PEER_ID=peer0.institution.mainauthority.com
-      - CORE_PEER_ADDRESS=peer0.institution.mainauthority.com:7051
-      - CORE_PEER_LISTENADDRESS=0.0.0.0:7051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.institution.mainauthority.com:7052
-      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.institution.mainauthority.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.institution.mainauthority.com:7051
+      - CORE_PEER_ADDRESS=peer0.institution.mainauthority.com:8051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:8051
+      - CORE_PEER_CHAINCODEADDRESS=peer0.institution.mainauthority.com:8052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:8052
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.institution.mainauthority.com:8051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.institution.mainauthority.com:8051
       - CORE_PEER_LOCALMSPID=MainAuthorityInstitutionMSP
     volumes:
       - /var/run/:/host/var/run/
@@ -35,7 +35,7 @@ services:
       - ../crypto-config/peerOrganizations/institution.mainauthority.com/peers/peer0.institution.mainauthority.com/tls:/etc/hyperledger/fabric/tls
       - peer0.institution.mainauthority.com:/var/hyperledger/production
     ports:
-      - 7051:7051
+      - 8051:8051
 
   peer0.applicant.mainauthority.com:
     container_name: peer0.applicant.mainauthority.com
@@ -64,14 +64,9 @@ services:
     extends:
       file: ca-base.yaml
       service: ca-base
-    environment:
-      - FABRIC_CA_SERVER_CA_NAME=MainAuthorityCA
-      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.mainauthority.com-cert.pem
-      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/priv_sk
-      - FABRIC_CA_SERVER_PORT=7054
-    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.mainauthority.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/priv_sk -b admin:adminpw -d'
     volumes:
-      - ../crypto-config/ordererOrganizations/mainauthority.com/ca/:/etc/hyperledger/fabric-ca-server-config
+      - ../crypto-config/ordererOrganizations/mainauthority.com/ca:/etc/hyperledger/fabric-ca-server-config
+      - ../ca/mainauthority.com:/etc/hyperledger/fabric-ca-server
     ports:
       - 7054:7054
 
@@ -80,14 +75,9 @@ services:
     extends:
       file: ca-base.yaml
       service: ca-base
-    environment:
-      - FABRIC_CA_SERVER_CA_NAME=MainAuthorityInstitutionCA
-      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.institution.mainauthority.com-cert.pem
-      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/priv_sk
-      - FABRIC_CA_SERVER_PORT=8054
-    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.institution.mainauthority.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/priv_sk -b admin:adminpw -d'
     volumes:
-      - ../crypto-config/peerOrganizations/institution.mainauthority.com/ca/:/etc/hyperledger/fabric-ca-server-config
+      - ../crypto-config/peerOrganizations/institution.mainauthority.com/ca:/etc/hyperledger/fabric-ca-server-config
+      - ../ca/institution.mainauthority.com:/etc/hyperledger/fabric-ca-server
     ports:
       - 8054:8054
 
@@ -96,13 +86,8 @@ services:
     extends:
       file: ca-base.yaml
       service: ca-base
-    environment:
-      - FABRIC_CA_SERVER_CA_NAME=MainAuthorityApplicantCA
-      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.applicant.mainauthority.com-cert.pem
-      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/priv_sk
-      - FABRIC_CA_SERVER_PORT=9054
-    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.applicant.mainauthority.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/priv_sk -b admin:adminpw -d'
     volumes:
-      - ../crypto-config/peerOrganizations/applicant.mainauthority.com/ca/:/etc/hyperledger/fabric-ca-server-config
+      - ../crypto-config/peerOrganizations/applicant.mainauthority.com/ca:/etc/hyperledger/fabric-ca-server-config
+      - ../ca/applicant.mainauthority.com:/etc/hyperledger/fabric-ca-server
     ports:
       - 9054:9054
