--- a/base/peer-base.yaml
+++ b/base/peer-base.yaml
@@ -3,10 +3,10 @@ version: '2'
 services:
 
   peer-base:
-    image: hyperledger/fabric-peer
+    image: hyperledger/fabric-peer:$IMAGE_TAG
     environment:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=${COMPOSE_PROJECT_NAME}
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=reliable-resume-system_rrs
       - FABRIC_LOGGING_SPEC=INFO
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_GOSSIP_USELEADERELECTION=true
@@ -20,7 +20,7 @@ services:
     command: peer node start
 
   orderer-base:
-    image: hyperledger/fabric-orderer
+    image: hyperledger/fabric-orderer:$IMAGE_TAG
     environment:
       - FABRIC_LOGGING_SPEC=INFO
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
