--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "fabric-ca-client": "beta",
-    "fabric-network": "beta",
-    "helmet": "^3.22.0",
-    "pem": "^1.14.4"
+    "fabric-ca-client": "^2.1.0",
+    "fabric-network": "^2.1.0",
+    "helmet": "^3.22.0"
   }
 }
