--- a/ca/applicant.mainauthority.com/fabric-ca-server-config.yaml
+++ b/ca/applicant.mainauthority.com/fabric-ca-server-config.yaml
@@ -67,6 +67,12 @@ ldap:
         - name:
           value:
 
+affiliations:
+  institution:
+    - main
+  applicant:
+    - main
+
 signing:
   default:
     usage:
