--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,5 +1,6 @@
 {
     "env": {
+        "browser": true,
         "commonjs": true,
         "es6": true,
         "node": true
@@ -10,7 +11,8 @@
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 10
+        "ecmaVersion": 10,
+        "sourceType": "module"
     },
     "rules": {
         "indent": [
