--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,6 +182,36 @@ services:
     networks:
       - rrs
 
+  client.institution.mainauthority.com:
+    container_name: client.institution.mainauthority.com
+    image: node:12
+    environment:
+      - NODE_ENV=production
+      - PORT=8443
+      - HOST=0.0.0.0
+      - TLS_CERT_FILE=/var/run/rrs/crypto-config/peerOrganizations/institution.mainauthority.com/tlsca/tlsca.institution.mainauthority.com-cert.pem
+      - TLS_KEY_FILE=/var/run/rrs/crypto-config/peerOrganizations/institution.mainauthority.com/tlsca/priv_sk
+      - CCP_PATH=/var/run/rrs/ccp/ccp.mainauthority.com.json
+      - WALLET_PATH=/var/run/rrs/wallet
+      - CA_URL=https://ca.institution.mainauthority.com:8054
+      - MSP_ID=MainAuthorityInstitutionMSP
+      - USER_ID=admin
+      - USER_SECRET=adminpw
+    working_dir: /var/run/rrs/client
+    command: sh -c "npm install && node index"
+    volumes:
+      - ./client:/var/run/rrs/client
+      - ./wallet:/var/run/rrs/wallet
+      - ./ccp:/var/run/rrs/ccp
+      - ./crypto-config:/var/run/rrs/crypto-config
+    depends_on:
+      - init.mainauthority.com
+      - ca.institution.mainauthority.com
+    ports:
+      - 8443:8443
+    networks:
+      - rrs
+
   client.applicant.mainauthority.com:
     container_name: client.applicant.mainauthority.com
     image: node:12
@@ -191,7 +221,7 @@ services:
       - HOST=0.0.0.0
       - TLS_CERT_FILE=/var/run/rrs/crypto-config/peerOrganizations/applicant.mainauthority.com/tlsca/tlsca.applicant.mainauthority.com-cert.pem
       - TLS_KEY_FILE=/var/run/rrs/crypto-config/peerOrganizations/applicant.mainauthority.com/tlsca/priv_sk
-      - CCP_PATH=/var/run/rrs/ccp/ccp.applicant.mainauthority.com.json
+      - CCP_PATH=/var/run/rrs/ccp/ccp.mainauthority.com.json
       - WALLET_PATH=/var/run/rrs/wallet
       - CA_URL=https://ca.applicant.mainauthority.com:9054
       - MSP_ID=MainAuthorityApplicantMSP
@@ -209,48 +239,5 @@ services:
       - ca.applicant.mainauthority.com
     ports:
       - 9443:9443
-    networks:
-      - rrs
-
-  cli:
-    container_name: cli
-    image: hyperledger/fabric-tools:$IMAGE_TAG
-    tty: true
-    stdin_open: true
-    environment:
-      - GOPATH=/opt/gopath
-      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=reliable-resume-system_rrs
-      - FABRIC_LOGGING_SPEC=INFO
-      - CORE_PEER_ID=peer0.institution.mainauthority.com
-      - CORE_PEER_ADDRESS=peer0.institution.mainauthority.com:7051
-      - CORE_PEER_LOCALMSPID=MainAuthorityInstitutionMSP
-      - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_GOSSIP_USELEADERELECTION=true
-      - CORE_PEER_GOSSIP_ORGLEADER=false
-      - CORE_PEER_PROFILE_ENABLED=true
-      - CORE_CHAINCODE_EXECUTETIMEOUT=300s
-      - CORE_PEER_LISTENADDRESS=0.0.0.0:8051
-      - CORE_PEER_CHAINCODEADDRESS=peer0.institution.mainauthority.com:8052
-      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:8052
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.institution.mainauthority.com:8051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.institution.mainauthority.com:8051
-      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/institution.mainauthority.com/peers/peer0.institution.mainauthority.com/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/institution.mainauthority.com/peers/peer0.institution.mainauthority.com/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/institution.mainauthority.com/peers/peer0.institution.mainauthority.com/tls/ca.crt
-      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/institution.mainauthority.com/users/Admin@institution.mainauthority.com/msp
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
-    command: /bin/bash
-    volumes:
-      - /var/run/:/host/var/run/
-      - peer0.institution.mainauthority.com:/var/hyperledger/production
-      - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto
-      - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
-      - ./chaincode:/opt/gopath/src/github.com/hyperledger/fabric/peer/chaincode
-    depends_on:
-      - init.mainauthority.com
-      - ca.institution.mainauthority.com
-    ports:
-      - 8053:8051
     networks:
       - rrs
