--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -11,8 +11,7 @@
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 10,
-        "sourceType": "module"
+        "ecmaVersion": 10
     },
     "rules": {
         "indent": [
